# opengl

./: CMakeCache.txt  CMakeLists.txt  Makefile  basic.frag  basic.vs  cmake_install.cmake  hello.cpp  shader.h  wubwub
